# live2d-haxe

./: .gitignore  ARCHITECTURE.md  BACKEND_GUIDE.md  CHANGELOG.md  LICENSE  README.md  README_CN.md  extraParams.hxml  haxelib.json
native/: CMakeLists.txt
native/hl/: live2d_hl.cpp
native/live2d/: CubismRenderer_Stub.cpp  LAppModel_CalcOnly.cpp  LAppModel_CalcOnly.hpp  LAppPal_CalcOnly.cpp  LAppPal_CalcOnly.hpp  LAppPal_NoGL.cpp  live2d_capi.cpp  live2d_capi.def  live2d_capi.h
src/live2d/: CLI.hx
src/live2d/cubism/: L2D.hx  L2DComponent.hx  L2DCore.hx  L2DManager.hx  L2DModel.hx
src/live2d/cubism/backend/: IL2DRenderer.hx  L2DDisplayHandle.hx  L2DTextureHandle.hx
src/live2d/cubism/backend/heaps/: CubismHeapsShader.hx  CubismMaskShader.hx  HeapsRenderer.hx  L2DHeapsMaskRTCache.hx  L2DMeshDrawable.hx
src/live2d/cubism/backend/openfl/: CubismRendererShader.hx  OpenFLRenderer.hx
src/live2d/cubism/core/: CubismAPI.hx  ICubismBridge.hx  L2DModel.hx
src/live2d/cubism/core/bridge/: HlWindowsBridge.hx  HxcppWindowsBridge.hx
src/live2d/cubism/ext/: IL2DAudioSource.hx  IL2DInputAdapter.hx  L2DAudioSourceBase.hx  L2DCallbackAudioSource.hx  L2DDebugOverlay.hx  L2DEvent.hx  L2DEventDispatcher.hx  L2DLipSync.hx  L2DLookAt.hx  L2DModelConstants.hx  L2DMotionQueue.hx  L2DPartHandle.hx  L2DParts.hx  L2DPerfPanel.hx  L2DPhysicsTuner.hx  L2DVTubeModel.hx  L2DWavFileAudioSource.hx
src/live2d/cubism/ext/flixel/: L2DFlixelAudioSource.hx  L2DFlixelInputAdapter.hx  L2DFlixelPerfPanel.hx
src/live2d/cubism/ext/heaps/: L2DHeapsAudioSource.hx  L2DHeapsDebugOverlay.hx  L2DHeapsInputAdapter.hx  L2DHeapsPerfPanel.hx
src/live2d/cubism/ext/openfl/: L2DOpenFLAudioSource.hx  L2DOpenFLDebugOverlay.hx  L2DOpenFLInputAdapter.hx  L2DOpenFLPerfPanel.hx
src/live2d/cubism/flixel/: FlxL2DGroup.hx  L2DFlixelComponent.hx  L2DFlixelManager.hx
src/live2d/cubism/heaps/: L2DHeapsObject.hx
test/: HeapsDemo.hx  L2DDemoState.hx  Main.hx  ModelConstants.hx  Project.xml  copy.bat  copy_heaps.bat  copy_hl.bat  heaps_demo.hxml
